<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- NAME -->
    <EditText
        android:id="@+id/edtCostName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cost_name"/>

    <!-- AMOUNT -->
    <EditText
        android:id="@+id/edtCostAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="number"
        android:layout_marginTop="8dp"/>

    <!-- STATUS -->
    <RadioGroup
        android:id="@+id/rgStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/rbPending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"/>

        <RadioButton
            android:id="@+id/rbApproved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approved"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

    <!-- BUTTONS -->
    <!-- ACTION BUTTONS -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/darkblue"
            android:text="@string/back"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/darkblue"
            android:layout_marginStart="12dp"
            android:text="@string/save"/>
    </LinearLayout>
    <!-- DELETE BUTTON -->
    <Button
        android:id="@+id/btnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/delete"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"/>
</LinearLayout>