<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/logout"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/tvMessage"
        android:text="@string/logout_message"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnYes"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:layout_marginRight="10dp"
            android:text="@string/yes"
            android:textSize="16sp"
            android:textColor="@color/darkblue"
            app:cornerRadius="30dp"
            app:strokeWidth="2dp"
            app:strokeColor="@color/darkblue"
            app:backgroundTint="@color/white"
            android:fontFamily="@font/bevietnampro_medium"
            />

        <Button
            android:id="@+id/btnNo"
            android:layout_width="110dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/darkblue"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>