<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pic_background2">

    <!-- Toolbar -->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            app:tint="@color/darkblue"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/change_password"
            android:textColor="@color/darkblue"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:fontFamily="@font/bevietnampro_regular"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

    <!-- Scrollable content -->
    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <!-- Current Password -->
            <EditText
                android:id="@+id/etCurrentPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/current_password"
                android:padding="10dp"
                android:textColor="@color/darkblue"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:fontFamily="@font/bevietnampro_regular"/>

            <!-- New Password -->
            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/new_password"
                android:padding="10dp"
                android:textColor="@color/darkblue"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:fontFamily="@font/bevietnampro_regular"/>

            <!-- Confirm New Password -->
            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/confirm_new_password"
                android:padding="10dp"
                android:textColor="@color/darkblue"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:fontFamily="@font/bevietnampro_regular"/>

            <!-- OK Button -->
            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:textSize="16sp"
                android:textColor="@color/white"
                app:backgroundTint="@color/darkblue"
                android:fontFamily="@font/bevietnampro_semibold"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="5dp"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/darkblue"
                app:cornerRadius="30dp"
                app:strokeWidth="2dp"
                app:strokeColor="@color/darkblue"
                app:backgroundTint="@color/white"
                android:fontFamily="@font/bevietnampro_medium"
                />
        </LinearLayout>
    </ScrollView>

    <!-- BOTTOM NAVIGATION BAR -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Home -->
        <LinearLayout
            android:id="@+id/navHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_house"
                app:tint="@color/darkblue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnampro_regular"
                android:text="@string/home"
                android:textColor="@color/darkblue"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Task -->
        <LinearLayout
            android:id="@+id/navProject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/navHome"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/navAttendance"
            app:layout_constraintHorizontal_chainStyle="spread">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_folder"
                app:tint="@color/darkblue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnampro_regular"
                android:text="@string/project"
                android:textColor="@color/darkblue"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Attendance -->
        <LinearLayout
            android:id="@+id/navAttendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@id/navProject"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/navAccount">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_calendar"
                app:tint="@color/darkblue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnampro_regular"
                android:text="@string/attendance"
                android:textColor="@color/darkblue"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Setting -->
        <LinearLayout
            android:id="@+id/navAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/ic_gear"
                app:tint="@color/darkblue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bevietnampro_regular"
                android:text="@string/setting"
                android:textColor="@color/darkblue"
                android:textSize="14sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>